deployments/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
