deployments/home-assistant/esphome.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
  namespace: homeassistant
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`esphome.local.tigovanroy.space`) && PathPrefix(`/api`)
    kind: Rule
    services:
      - name: esphome
        port: 6052
    middlewares:
      - name: homeassistant-headers
  - match: Host(`esphome.local.tigovanroy.space`)
    kind: Rule
    services:
      - name: esphome
        port: 6052
    middlewares:
      - name: homeassistant-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: homeassistant
spec:
  selector:
    app: esphome
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 6052
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: homeassistant
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: esphome
          image: "ghcr.io/esphome/esphome:stable"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6052
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName:  homeassistant-claim
