deployments/home-assistant/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.homeassistant.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: homeassistant-service
          port: 8123
    - match: Host(`homeassistant.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: homeassistant-service
          port: 8123
      middlewares:
        - name: homeassistant-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
